--- a/templates/index.html
+++ b/templates/index.html
@@ -413,7 +413,7 @@
             </div>
         </div>
 
-        <div class="footer-bar">
+        <div class="footer-bar red-bg">
             <div class="footer-left">
                 <a id="footer-flag"
                    href="https://mlh.io/seasons/na-2017/events?utm_source=na-2017&utm_medium=TrustBadge&utm_campaign=na-2017&utm_content=white"
