--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -219,13 +219,11 @@ a {
 
     box-shadow: none;
 
-    color: #33c5f4;
+    color: #e8b92b;
 
     background-color: white;
     border-radius: 5px;
-    border-color: #33c5f4;
-    border-width: 2px;
-    border-style: solid;
+    border: 2px solid #e8b92b;
 
     text-decoration: none;
     transition: all 0.2s;
@@ -233,7 +231,7 @@ a {
 }
 
 .header button:hover {
-    background-color: #33c5f4;
+    background-color: #e8b92b;
     color: white;
     cursor: pointer;
     transition: all 0.2s;
@@ -269,7 +267,7 @@ a {
 #eventInfo * {
     margin: 0;
     padding: 0;
-    color: #33c5f4;
+    color: #e8b92b;
 }
 
 #logo {
