--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.min.css" rel="stylesheet" type="text/css">
 	<link href="//fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet" type="text/css">
 	<link href="//fonts.googleapis.com/css?family=Lora:400,400italic|Open+Sans|Roboto|Source+Sans+Pro" rel="stylesheet" type="text/css">
     <link rel="stylesheet" media="all" href="{{ static('stylesheets/base.css') }}">
