--- a/templates/header.html
+++ b/templates/header.html
@@ -6,9 +6,12 @@
     </div>
     <div id="logo">
         <a href="{{ url_for('mhacks-home') }}">
-            <img id="logo-text" class="logo-scale" src="{{ static('assets/logo-text.png') }}" alt="MHacks 9 Logo">
+            <img id="logo-text" src="{{ static('assets/logo-text.png') }}" alt="MHacks 9 Logo">
         </a>
     </div>
+
+    <i class="fa fa-angle-double-down fa-3x faa-flash animated" id="scroll-down" aria-hidden="true"></i>
+
     <div id="headerButtons">
         {% if request.user.is_authenticated() %}
             {% if 'dashboard/' not in request.path %}
