--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@
 
             <h2 class="section-header">Frequently Asked Questions</h2>
             <div class="col-1 center-col" style="margin-top: 25px;">
-                <div class="big-tile">
+                <div class="faq-section">
 
                     <h4>General</h4>
                     <div class="faq-row yellow-text">
