--- a/templates/dynamic_people.html
+++ b/templates/dynamic_people.html
@@ -8,14 +8,14 @@
 		</div>
 	</div>
 	<div class="dynamic-people">
-		<img id="p1" class="person" src="{{ static('assets/characterSet/character-1.png') }}" alt="person1">
-		<img id="p2" class="person" src="{{ static('assets/characterSet/character-2.png') }}" alt="person2">
-		<img id="p3" class="person" src="{{ static('assets/characterSet/character-3.png') }}" alt="person3">
-		<img id="p4" class="person" src="{{ static('assets/characterSet/character-4.png') }}" alt="person4">
-		<img id="p5" class="person" src="{{ static('assets/characterSet/character-5.png') }}" alt="person5">
-		<img id="p6" class="person" src="{{ static('assets/characterSet/character-6.png') }}" alt="person6">
-		<img id="p7" class="person" src="{{ static('assets/characterSet/character-7.png') }}" alt="person7">
-		<img id="p8" class="person" src="{{ static('assets/characterSet/character-8.png') }}" alt="person8">
+		<img id="p1" data-place="0" class="person" src="{{ static('assets/characterSet/character-1.png') }}" alt="person1">
+		<img id="p2" data-place="1" class="person" src="{{ static('assets/characterSet/character-2.png') }}" alt="person2">
+		<img id="p3" data-place="2" class="person" src="{{ static('assets/characterSet/character-3.png') }}" alt="person3">
+		<img id="p4" data-place="3" class="person" src="{{ static('assets/characterSet/character-4.png') }}" alt="person4">
+		<img id="p5" data-place="4" class="person" src="{{ static('assets/characterSet/character-5.png') }}" alt="person5">
+		<img id="p6" data-place="5" class="person" src="{{ static('assets/characterSet/character-6.png') }}" alt="person6">
+		<img id="p7" data-place="6" class="person" src="{{ static('assets/characterSet/character-7.png') }}" alt="person7">
+		<img id="p8" data-place="7" class="person" src="{{ static('assets/characterSet/character-8.png') }}" alt="person8">
 	</div>
 </div>
 <script src="{{ static('javascript/dynamic_people.js') }}" type="text/javascript"></script>
