--- a/static/stylesheets/form.css
+++ b/static/stylesheets/form.css
@@ -323,6 +323,16 @@ html button:hover {
     margin: 0 0 0 20px;
 }
 
+#id_resume {
+    margin-left: 20px;
+}
+
 #id_needs_reimbursement {
     margin: 4px 0 0 20px;
+}
+
+#id_gender,
+#id_race {
+    border: 0;
+    margin-left: 20px;
 }
