header redirect fix

--- a/templates/header.html
+++ b/templates/header.html
@@ -53,6 +53,6 @@
 <script src="{{ static('javascript/header.js') }}" type="text/javascript"></script>
 <script>
     $('#logo-text').click(function(event){
-        window.open("{ url_for('mhacks-home') }");
+        window.open("{ url_for('mhacks-home') }", '_self');
     });
 </script>
