--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,8 @@
         <div class="info-section" id="scroll-to-here">
             <div class="section-container">
                 <h2 class="section-header">What is MHacks?</h2>
-                <p>MHacks is a 36-hour hackathon run by University of Michigan students. At MHacks, we want to help you
+                <p class="big-text">
+                    MHacks is a 36-hour hackathon run by University of Michigan students. At MHacks, we want to help you
                     to turn your ideas into reality. You're welcome to come with or without a team. We'll provide you
                     with all the resources and mentors you need to help you work on something cool or learn new skills.
                     You'll have the freedom to create a product, learn new techniques for your future work, or just have
@@ -84,14 +85,14 @@
             <div class="section-container">
                 <h2 class="section-header">What's new with MHacks 9?</h2>
 
-                <p>
+                <p class="big-text">
                     MHacks has always been about the freedom to create what your heart desires. At MHacks 9, we’d love
                     to help you turn your dreams into something better than what you imagined. MHacks hackers are
                     well-known for creating technically unique and complex hacks, but this year MHacks 9 will promote an
                     Empathy-Driven Design process. We will guide you through using empathetic drivers to create
                     solutions that are not only functional, but also user-friendly.
                 </p>
-                <p>
+                <p class="big-text">
                     You can expect an even more collaborative, instructional, and inclusive environment than ever
                     before. We’ll be inviting speakers and mentors from a variety of disciplines to help hackers plan
                     and design hacks that users will provide users with enjoyable and meaningful interactions. Workshops
@@ -99,7 +100,7 @@
                     and activities for hackers to form teams and leverage their individual expertise to create an even
                     more exemplary product together.
                 </p>
-                <p>
+                <p class="big-text">
                     As always, we’ll continue to focus on providing a healthy and fun atmosphere for hackers to work.
                     Nutritious food options, showers, and wellness-focused activities will be some of our top
                     priorities. Hackers can take a break from the hustle and bustle of hacking with snacks and games
