--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -185,6 +185,11 @@ a {
     text-decoration: none !important;
 }
 
+p.big-text {
+    width: 525px;
+    max-width: 90%;
+}
+
 /* --- Header and Header Content --- */
 #header-pad {
     padding-top: 100px;
@@ -206,7 +211,8 @@ a {
     z-index: 9999;
     opacity: 1;
     background-color: white;
-    border-bottom: #4a4948 solid 3px;
+    /*border-bottom: #4a4948 solid 3px;*/
+    border-bottom: #eeeeee solid 1px;
 }
 
 .header button {
@@ -257,6 +263,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    transition: left 0.4s;
 }
 
 .header-condensed #eventInfo {
@@ -324,8 +331,8 @@ a {
 
 #headerDropdown {
     position: fixed;
-    top: 32px;
-    right: 50px;
+    top: 33px;
+    right: 25px;
     text-align: right;
 }
 
@@ -340,13 +347,17 @@ a {
 
     height: 120px;
     width: 160px;
-    top: 97px;
+    top: 99px;
     right: -160px;
     transition: right 0.5s;
 
-    border-top: 3px solid #4a4948;
-    border-left: 3px solid #4a4948;
-    border-bottom: 3px solid #4a4948;
+    /*border-top: 3px solid #4a4948;*/
+    /*border-left: 3px solid #4a4948;*/
+    /*border-bottom: 3px solid #4a4948;*/
+
+    border-top: 1px solid #eeeeee;
+    border-left: 1px solid #eeeeee;
+    border-bottom: 1px solid #eeeeee;
 
     background-color: white;
     opacity: 0.95;
@@ -372,7 +383,7 @@ a {
 
 #dropdownTrigger:hover{
     cursor: pointer;
-    color: rgba(15, 59, 127, 1);
+    color: #807f7e;
 }
 
 /* --- Dynamic People --- */
@@ -511,7 +522,7 @@ a {
 
 .faq-item {
     width: 30%;
-    margin: 10px 3% 10px 0;
+    margin: 10px 1.66% 10px;
     transition: all 0.2s;
 }
 
@@ -521,7 +532,7 @@ a {
 
 .faq-item .question:hover {
     cursor: pointer;
-    color: rgba(15, 59, 127, 1);
+    color: #807f7e;
 }
 
 .faq-item .question:before {
@@ -814,6 +825,11 @@ li.answer {
         display: block;
     }
 
+    #eventInfo {
+        left: 25px;
+        transition: left 0.4s;
+    }
+
     #eventInfo h2 {
         font-size: 12pt;
     }
@@ -862,6 +878,12 @@ li.answer {
     .faq-item {
         width: 95%;
         margin-right: 0;
+    }
+}
+
+@media only screen and (max-width: 550px){
+    #eventInfo {
+        width: 140px;
     }
 }
 
