--- a/templates/header.html
+++ b/templates/header.html
@@ -25,7 +25,7 @@
             </form>
         {% else %}
             <form method="GET" action="{{ url_for('mhacks-login') }}">
-                <button type="submit">Login</button>
+                <button type="submit">Apply</button>
             </form>
         {% endif %}
     </div>
@@ -44,7 +44,7 @@
                 </form>
             {% else %}
                 <form method="GET" action="{{ url_for('mhacks-login') }}">
-                    <button type="submit">Login</button>
+                    <button type="submit">Apply</button>
                 </form>
             {% endif %}
         </div>
