--- a/static/stylesheets/form.css
+++ b/static/stylesheets/form.css
@@ -159,6 +159,7 @@ html button {
     font-size: 14px;
     color: white;
     padding: 10px 25px 10px 25px;
+    margin: 0 10px;
     border: 2px solid #e8b92b;
 }
 
