update application page + remove all references to MHacks 8

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -43,29 +43,30 @@
 
             {% if application %}
                 {% if application.decision == 'Accept' %}
-                    <h2>Application Status: <span class="rounded-box accept">ACCEPTED</span></h2>
-                    <p>You’re awesome. We’re awesome. Head over to our <a href="https://www.facebook.com/events/1197509966946089/">Facebook event page</a> and join the community!</p>
-                    <p>Hit the button below to register and make sure you check out our <span class="fake-link" id="bus-routes-link">bus routes</span>! 🎉</p>
-                    <p><a href="https://www.eventbrite.com/e/mhacks-8-busses-registration-27238162076">Click here to register for a bus! (Eventbrite)</a></p>
-                    <p>Please note: UMich students do not have to register for busses. There will be busses departing from Pierpont Commons at 4:00pm and 5:30pm on Friday.</p>
+                    <!--<h2>Application Status: <span class="rounded-box accept">ACCEPTED</span></h2>-->
+                    <!--<p>You’re awesome. We’re awesome. Head over to our <a href="https://www.facebook.com/events/1197509966946089/">Facebook event page</a> and join the community!</p>-->
+                    <!--<p>Hit the button below to register and make sure you check out our <span class="fake-link" id="bus-routes-link">bus routes</span>! 🎉</p>-->
+                    <!--<p><a href="https://www.eventbrite.com/e/mhacks-8-busses-registration-27238162076">Click here to register for a bus! (Eventbrite)</a></p>-->
+                    <!--<p>Please note: UMich students do not have to register for busses. There will be busses departing from Pierpont Commons at 4:00pm and 5:30pm on Friday.</p>-->
 
-                    <div id="bus-routes">
-                        <br>
-                        <img id="bus-routes-img" src="{{ static('assets/bus_routes_white.png') }}">
-                    </div>
-                    <br>
-                    {% if not registration_application %}
-                        <a href="{{ url_for('mhacks-registration') }}"><button type="button">Register</button></a>
-                    {% endif %}
-                    {% if application.reimbursement %}
-                        <br>
-                        <h2>Reimbursement amount: <span class="rounded-box accept">${{ '{:.2f}'.format(application.reimbursement) }}</span> </h2>
-                        <p>You currently have 5 days to send your flight receipt to <a href="mailto:flymhacks@umich.edu">flymhacks@umich.edu</a>! Please refer to <a href="https://goo.gl/wORx7K">this guide</a> for more details on traveling that weekend.</p>
-                        <p>We’ll see you there!</p>
+                    <!--<div id="bus-routes">-->
+                        <!--<br>-->
+                        <!--<img id="bus-routes-img" src="{{ static('assets/bus_routes_white.png') }}">-->
+                    <!--</div>-->
+                    <!--<br>-->
+                    <!--{% if not registration_application %}-->
+                        <!--<a href="{{ url_for('mhacks-registration') }}"><button type="button">Register</button></a>-->
+                    <!--{% endif %}-->
+                    <!--{% if application.reimbursement %}-->
+                        <!--<br>-->
+                        <!--<h2>Reimbursement amount: <span class="rounded-box accept">${{ '{:.2f}'.format(application.reimbursement) }}</span> </h2>-->
+                        <!--<p>You currently have 5 days to send your flight receipt to <a href="mailto:flymhacks@umich.edu">flymhacks@umich.edu</a>! Please refer to <a href="https://goo.gl/wORx7K">this guide</a> for more details on traveling that weekend.</p>-->
+                        <!--<p>We’ll see you there!</p>-->
+                    <p>Sorry for the technical difficulties folks, we'll make an announcement when we're back up and running. Stay tuned!</p>
                     {% endif %}
                 {% elif application.decision == 'Waitlist' %}
                     <h2>Application Status: <span class="rounded-box waitlist">WAITLIST</span></h2>
-                    <p>Thank you for applying to MHacks 8. Unfortunately, we can't extend you an invitation at the moment, but hang tight! If there’s a change in your decision, we’ll let you know.</p>
+                    <p>Thank you for applying to MHacks 9. Unfortunately, we can't extend you an invitation at the moment, but hang tight! If there’s a change in your decision, we’ll let you know.</p>
                 {% elif application.decision == 'Decline' %}
                     <div>
                         <h2>Your application has been submitted. We look forward to reading it!</h2>
@@ -86,7 +87,7 @@
                     </div>
                 {% endif %}
 {#            {% else %}#}
-{#                <h2>Welcome to your hacker dashboard! Check back here for MHacks 8 invitations, travel reimbursements, and registration forms.</h2>#}
+{#                <h2>Welcome to your hacker dashboard! Check back here for MHacks 9 invitations, travel reimbursements, and registration forms.</h2>#}
             {% endif %}
         {% endif %}
         {% if not registration_application and not application %}
