--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     <!-- Open Graph Tags -->
     <meta property="og:description" content="700 hackers will gather from around the world, and we’ll provide you with everything you need to be as curious, productive, and passionate as you can be. Whether it’s your first time hacking or your ninth, MHacks is a weekend experience you won’t want to miss." />
     <meta property="og:title" content="MHacks 9" />
-    <meta property="og:image" content="{{ static('assets/logoBlue.png') }}" />
+    <meta property="og:image" content="{{ static('assets/Logo.png') }}" />
 
     {% block headers %}
     {% endblock %}
