--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -93,9 +93,10 @@
         {% if not registration_application and not application %}
         <div class="dashboard-registration">
             <h2>Hi! Welcome to your Dashboard!</h2>
-            <p>This is where you'll find updates on your application status, travel reimbursements, and registration forms.</p>
-            <p>Fill out one of the applications below if you want to attend MHacks 9. For those who want to both hack
-                and mentor, use the Hacker application. If you think you might need a Travel Reimbursement, you must
+            <p>This is where you'll find updates on your application status, travel reimbursements, and registration
+                forms. Fill out one of the applications below if you want to attend MHacks 9.</p>
+            <p> For those who want to both hack and mentor, use the Hacker application. </p>
+            <p> If you think you might need a Travel Reimbursement, you must
                 apply by <strong>Saturday, February 18th</strong>. Otherwise, the application is open until
                 <strong>Friday, March 10th</strong>.</p>
             <div class="row-container">
