Got rid of "Hi!" for cortices

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,19 +33,19 @@
                         <div class="centered-image-container">
                             <img src="{{ static('assets/cortices/ios-cortex.png') }}" alt="iOS Persona" />
                         </div>
-                        <h4>Hi! I'm the iOS Cortex.</h4>
+                        <h4>iOS Development</h4>
                     </div>
                     <div class="col-3 category-item">
                         <div class="centered-image-container">
                             <img src="{{ static('assets/cortices/vr-cortex.png') }}" alt="AR/VR Persona" />
                         </div>
-                        <h4>Hi! I'm the AR/VR Cortex.</h4>
+                        <h4>Augmented/Virtual Reality</h4>
                     </div>
                     <div class="col-3 category-item">
                         <div class="centered-image-container">
                             <img src="{{ static('assets/cortices/game-cortex.png') }}" alt="Game Developer Persona" />
                         </div>
-                        <h4>Hi! I'm the Game Dev Cortex.</h4>
+                        <h4>Game Development.</h4>
                     </div>
                 </div>
 
@@ -54,19 +54,19 @@
                         <div class="centered-image-container">
                             <img src="{{ static('assets/cortices/android-cortex.png') }}" alt="Android Persona" />
                         </div>
-                        <h4>Hi! I'm the Android Cortex.</h4>
+                        <h4>Android Development</h4>
                     </div>
                     <div class="col-3 category-item">
                         <div class="centered-image-container">
                             <img src="{{ static('assets/cortices/web-cortex.png') }}" alt="Web Dev Persona" />
                         </div>
-                        <h4>Hi! I'm the Web Dev Cortex.</h4>
+                        <h4>Web Development</h4>
                     </div>
                     <div class="col-3 category-item">
                         <div class="centered-image-container">
                             <img src="{{ static('assets/cortices/hardware-cortex.png') }}" alt="Hardware Persona" />
                         </div>
-                        <h4>Hi! I'm the Hardware Cortex.</h4>
+                        <h4>Hardware</h4>
                     </div>
                 </div>
 
@@ -75,7 +75,7 @@
                         <div class="centered-image-container">
                             <img src="{{ static('assets/cortices/ai-cortex.png') }}" alt="AI/ML Persona" />
                         </div>
-                        <h4>Hi! I'm the AI/ML Cortex.</h4>
+                        <h4>Artificial Intelligence/Machine Learning</h4>
                     </div>
                 </div>
             </div>
