Updated reimbursement content

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -44,18 +44,19 @@
             {% if application %}
                 {% if application.decision == 'Accept' %}
                     <h2>Application Status: <span class="rounded-box accept">ACCEPTED</span></h2>
-                    <p>You’re awesome. We’re awesome. Head over to our <a href="https://www.facebook.com/events/1197509966946089/">Facebook event page</a> and join the community!</p>
+                    <p>You’re awesome. We’re awesome. Head over to our <a href="https://www.facebook.com/events/257902701319629/">Facebook event page</a> and join the community!</p>
 
                     {% if not registration_application %}
                         <p>Hit the button below to confirm your acceptance!</p>
                         <a href="{{ url_for('mhacks-registration') }}"><button type="button">Confirm Acceptance</button></a>
                     {% endif %}
-                    <!--{% if application.reimbursement %}-->
-                        <!--<br>-->
-                        <!--<h2>Reimbursement amount: <span class="rounded-box accept">${{ '{:.2f}'.format(application.reimbursement) }}</span> </h2>-->
-                        <!--<p>You currently have 5 days to send your flight receipt to <a href="mailto:flymhacks@umich.edu">flymhacks@umich.edu</a>! Please refer to <a href="https://goo.gl/wORx7K">this guide</a> for more details on traveling that weekend.</p>-->
-                        <!--<p>We’ll see you there!</p>-->
-                    <p>Sorry for the technical difficulties folks, we'll make an announcement when we're back up and running. Stay tuned!</p>
+                    {% if application.reimbursement %}
+                        <br />
+                        <br />
+                        <h2>Reimbursement amount: <span class="rounded-box accept">${{ '{:.2f}'.format(application.reimbursement) }}</span> </h2>
+                        <p>You currently have 5 days to send your flight receipt to <a href="mailto:flymhacks@umich.edu">flymhacks@umich.edu</a>! Check back here for more info on travel logistics soon</p>
+                        <p>Please note you must submit a hack at MHacks 9 to receive a travel reimbursement</p>
+                        <p>We’ll see you there!</p>
                     {% endif %}
                 {% elif application.decision == 'Waitlist' %}
                     <h2>Application Status: <span class="rounded-box waitlist">WAITLIST</span></h2>
